src/renderer/app.scss
html {
    background: #f5f5f5;
}
body {
    margin: 0;
    font-family: 'IBM Plex Mono', monospace;
    -webkit-font-smoothing: antialiased;
}

button {
    all: unset;
    cursor: pointer;
}

::-webkit-scrollbar {
    display: none;
}

